...

@implementation YXPaperMainViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    UIBarButtonItem *rightItem = [[UIBarButtonItem alloc]initWithTitle:@"添加" style:UIBarButtonItemStylePlain target:self action:@selector(addQuestionAction)];
    self.navigationItem.rightBarButtonItem = rightItem;
    UIBarButtonItem *leftItem = [[UIBarButtonItem alloc]initWithTitle:@"退出" style:UIBarButtonItemStylePlain target:self action:@selector(exitAction)];
    self.navigationItem.leftBarButtonItem = leftItem;

    [self setupUI];
}
...
    [line mas_makeConstraints:^(MASConstraintMaker *make) {
        make.left.right.mas_equalTo(0);
        make.top.mas_equalTo(self.tableView.mas_bottom).mas_offset(5);
        make.height.mas_equalTo(1);
    }];
    
    UIButton *qaButton = [self paperButtonWithTitle:@"进入答题"];
    qaButton.tag = 100;
    [self.view addSubview:qaButton];
    [qaButton mas_makeConstraints:^(MASConstraintMaker *make) {
        make.top.mas_equalTo(line.mas_bottom).mas_offset(5);
        make.centerX.mas_equalTo(-50);
        make.size.mas_equalTo(CGSizeMake(150, 40));
...
    submitButton.layer.borderColor = [UIColor blueColor].CGColor;
    [submitButton addTarget:self action:@selector(submitAction:) forControlEvents:UIControlEventTouchUpInside];
    return submitButton;
}

- (void)addQuestionAction{
    UIAlertController *alertVC = [UIAlertController alertControllerWithTitle:@"添加试题" message:@"请选择您想添加的模版题型到试卷中" preferredStyle:UIAlertControllerStyleActionSheet];
    WEAK_SELF
    UIAlertAction *backAction = [UIAlertAction actionWithTitle:@"返回" style:UIAlertActionStyleCancel handler:^(UIAlertAction * _Nonnull action) {
    }];
    UIAlertAction *singleChooseAction = [UIAlertAction actionWithTitle:@"单选" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemSingleChoose template:YXQATemplateSingleChoose]];
...
    }];
    UIAlertAction *multiChooseAction = [UIAlertAction actionWithTitle:@"多选" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemMultiChoose template:YXQATemplateMultiChoose]];
        [self.tableView reloadData];
    }];
    UIAlertAction *yesNoAction = [UIAlertAction actionWithTitle:@"判断" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemYesNo template:YXQATemplateYesNo]];
        [self.tableView reloadData];
    }];
    UIAlertAction *fillAction = [UIAlertAction actionWithTitle:@"填空" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemFill template:YXQATemplateFill]];
        [self.tableView reloadData];
    }];
    UIAlertAction *subjectiveAction = [UIAlertAction actionWithTitle:@"问答" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemSubjective template:YXQATemplateSubjective]];
        [self.tableView reloadData];
    }];
    UIAlertAction *classifyAction = [UIAlertAction actionWithTitle:@"归类" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
...
    }];
    UIAlertAction *connectAction = [UIAlertAction actionWithTitle:@"连线" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemConnect template:YXQATemplateConnect]];
        [self.tableView reloadData];
    }];
    UIAlertAction *readComplexAction = [UIAlertAction actionWithTitle:@"复合" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
        [[YXPaperManager sharedInstance].questions addObject:[YXQuestionFactory questionWithType:YXQAItemRead template:YXQATemplateReadComplex]];
        [self.tableView reloadData];
    }];
    UIAlertAction *clozeComplexAction = [UIAlertAction actionWithTitle:@"完形填空" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        STRONG_SELF
...
