...
    [self removeNotifications];
}

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    self.title = @"我的";
    self.items = @[@[@{@"":@"默认头像"}],
                   @[
//                       @{@"我的收藏":@"我的收藏"},
                     @{@"我的错题":@"我的错题"}],
                   @[@{@"学段":@"学段"},
                     @{@"教材版本":@"教材版本"}],
                   @[@{@"意见反馈":@"意见反馈"},
                     @{@"设置":@"设置"}]];
    
    [self registerNotifications];
...
