...
    
    addBtn.titleLabel.font = [UIFont boldSystemFontOfSize:17];
    addBtn.titleLabel.layer.shadowColor = [UIColor colorWithHexString:@"ffff99"].CGColor;
    addBtn.titleLabel.layer.shadowOffset = CGSizeMake(0, 1);
    addBtn.titleLabel.layer.shadowOpacity = 1;
    addBtn.titleLabel.layer.shadowRadius = 0;
    [addBtn setTitle:@"上传答案" forState:UIControlStateNormal];
    [addBtn setTitleColor:[UIColor colorWithHexString:@"805500"] forState:UIControlStateNormal];

    [addBtn addTarget:self action:@selector(buttonClicked:) forControlEvents:UIControlEventTouchUpInside];
    
    [self addSubview:addBtn];
    
...
